--- a/gitwork.html
+++ b/gitwork.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>new work</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, ad?</p>
 </body>
 </html>
