--- a/gitwork.html
+++ b/gitwork.html
@@ -8,5 +8,6 @@
 <body>
     <h1>new work</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, ad?</p>
+    <p>thanks</p>
 </body>
 </html>
